--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/public/thumbs_up_down_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Rock Paper Scissors</title>
   </head>
   <body>
     <div id="root"></div>
